--- a/css/calculator.css
+++ b/css/calculator.css
@@ -1,30 +1,30 @@
 html {
+  width: 100%;
+  height: 100%; 
 }
 
 body {
-  font: 300 18px/1.6 "Source Sans Pro",sans-serif;
-  margin: 0;
-  padding: 5em 0 2em;
-  text-align: center;
+  width: 100%;
+  height: 100%; 
 }
-.calculator_area td {
-    padding: 0;
-    vertical-align: top;
+.calculator{
+  width: 100%;
+  height: 100%; 
 }
+.calculator::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+    
 
-.calculator div {
-    width: 100%;
-    height: 38px;
-    margin: 0;
-    padding: 0;
-}
+
 
 .calculator button {
-    display: block;
-    overflow: hidden;
-    width: 100%;
-    height: 38px;
-    border: none;
-    cursor: pointer;
+  width: 25%;
+  height: 38px;
+  float: left;
+    
+  
 }
 
