--- a/css/calculator.css
+++ b/css/calculator.css
@@ -12,6 +12,11 @@ html {
 } 
 
 body {
+    content:'';
+    display:block;
+    overflow:hidden;
+    left:0;
+    top:0;
     width: 100%;
     height: 100%;
     font-family: 'Roboto', 'Noto Sans KR', sans-serif;
@@ -38,11 +43,4 @@ body {
     text-align: center;
     
     position: relative;
-}
-
-@media (max-width: 420px) {
-  .calculator {
-    width: 100%;
-    height: 100%;
-  }
 }
